ajuste swagger